@@ -1,3 +1,14 @@
+2007-07-24 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b96
+
+ * Fix: Handle case where the featured item or the parentalbum of it 
+		was deleted.
+
+ * Fix: Popup code for some album actions was wrong.
+
+ * Fix: Added popups/featured-item.php to safeToInclude array.
+
+ Thanks to Kai Tomalik for reporting the bugs above.
+
 2007-07-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b95
 
  * Fix: Use correct language domain lin lib/album.php
